🐛 Fix label::before to be visible when hover .todo-more-list

--- a/styles/components/_todo.scss
+++ b/styles/components/_todo.scss
@@ -32,7 +32,6 @@
     @include flexbox;
 
     &:hover {
-      label::before,
       .todo-more-btn {
         visibility: visible !important;
       }
@@ -55,6 +54,12 @@
 
   .todo-label {
     @include flexbox;
+
+    &:hover {
+      &::before {
+        visibility: visible !important;
+      }
+    }
 
     span {
       display: block;
